Finish trivia quiz

--- a/menus/trivia.html
+++ b/menus/trivia.html
@@ -17,7 +17,7 @@
                     answers: ["Sonic Adventure 2", "Sonic Heroes", "Sonic Unleashed", "Sonic Adventure"],
                     correctAnswer: 0
                 },
-                { 
+                /*{ 
                     title: "Which other band has Crush 40 performed concurrently on-stage with before?", 
                     answers: ["Fiona", "Tomoya Ohtani Band", "Cash Cash", "Kazaly"],
                     correctAnswer: 2
@@ -29,7 +29,7 @@
                 },
                 { 
                     title: "Which Crush 40 concert is depicted by this image?", 
-                    img: "Placeholder.png",
+                    img: "content/trivia/ConcertQ.png",
                     answers: ["Summer of Sonic 2016", "Sonic 25th Party", "Joypolis", "Youmacon"],
                     correctAnswer: 1
                 },
@@ -50,7 +50,7 @@
                 },
                 { 
                     title: "Which album has this cover image?", 
-                    img: "Placeholder.png",
+                    img: "content/trivia/2N2RTextless.png",
                     answers: ["Live!", "2 Nights 2 Remember", "Driving Through Forever", "Crush 40"],
                     correctAnswer: 1
                 },
@@ -88,7 +88,7 @@
                     title: "Which song is not labelled as Crush 40 but features both members in some capacity?", 
                     answers: ["Batter Up!", "Road To Win", "Burnout Running", "Sons Of Angels"],
                     correctAnswer: 0
-                }
+                }*/
             ];
         </script>
 
