--- a/menus/trivia.html
+++ b/menus/trivia.html
@@ -49,14 +49,14 @@
                     correctAnswer: 1
                 },
                 { 
-                    title: "Which album has this cover image?", 
+                    title: "Which album has this cover image?",
                     img: "content/trivia/2N2RTextless.png",
                     answers: ["Live!", "2 Nights 2 Remember", "Driving Through Forever", "Crush 40"],
                     correctAnswer: 1
                 },
                 { 
                     title: "How many songs did the band make for <i>Sonic and the Black Knight</i>?", 
-                    answers: ["1", "2", "3", "4"],
+                    answers: ["1", "2", "4", "5"],
                     correctAnswer: 3
                 },
                 { 
@@ -65,12 +65,12 @@
                     correctOrder: [ 0, 3, 1, 2 ]
                 },
                 { 
-                    title: "Which of these songs has never been performed live by the band yet?", 
+                    title: "Which of these songs has never been performed live by the band?", 
                     answers: ["Down & Dirty", "Light Of The Day", "Call Me Crazy", "Fight The Knight"],
                     correctAnswer: 1
                 },
                 { 
-                    title: "Which song has not had an official full instrumental released?", 
+                    title: "Which song has not had an official full-length instrumental released?", 
                     answers: ["I Am... All Of Me", "Live Life", "Live & Learn", "Open Your Heart"],
                     correctAnswer: 0
                 },
@@ -80,9 +80,9 @@
                     correctAnswer: 1
                 },
                 { 
-                    title: "How many concerts did the band perform from 2014 - 2016?",
+                    title: "How many different venues did the band perform at from 2014 - 2016?",
                     answers: ["5", "3", "8", "6"],
-                    correctAnswer: 0
+                    correctAnswer: 3
                 },
                 { 
                     title: "Which song is not labelled as Crush 40 but features both members in some capacity?", 
