Improve guitar view page

--- a/menus/guitarView.html
+++ b/menus/guitarView.html
@@ -13,12 +13,21 @@
     <body>
         <div class="intro block">
             <h1 id="title">ESP SONIC-II</h1>
-            <p id="gearPageNav"><a href="#">VIEW ON GEAR PAGE</a></p>
+            <p id="gearPageNav"><a href="#">VIEW CLOSE-UP ON GEAR PAGE</a></p>
+        </div>
+
+        <div class="guitarList">
+            <!-- TODO: Decide a better look? -->
+            <ul class="generalList tabLikeList list">
+                <li><p>Item1</p></li>
+                <li><p>Item2</p></li>
+            </ul>
         </div>
 
         <!-- Performances -->
         <div class="performances block">
-            <h2 class="dimentiaTitle">Performances</h1>
+            <h2 class="dimentiaTitle">Performances</h2>
+            <p>All performances this guitar was used in.</p>
             <ul class="generalList list">
                 <li><p>Item1</p></li>
                 <li><p>Item2</p></li>
@@ -27,12 +36,9 @@
 
         <!-- Description -->
         <div class="desc block">
-            <h2 class="dimentiaTitle">Description</h1>
-        </div>
-
-        <!-- Pictures -->
-        <div class="pictures block">
-            <h2 class="dimentiaTitle">Pictures</h1>
+            <h2 class="dimentiaTitle">Description</h2>
+            <p>This is the first guitar ESP created for Jun.</p>
+            <p>More Text</p>
         </div>
     </body>
 </html>
