--- a/menus/guitarView.html
+++ b/menus/guitarView.html
@@ -18,8 +18,8 @@
 
         <div class="guitarList">
             <!-- TODO: Decide a better look? -->
-            <ul class="generalList tabLikeList list">
-                <li><p>Item1</p></li>
+            <ul class="generalList tabLikeList list" id="guitarList">
+                <li class="selected"><p>Item1</p></li>
                 <li><p>Item2</p></li>
             </ul>
         </div>
