--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -59,13 +59,21 @@
                     {
                         imgSrc: "../img/content/discography/physical/Thrill/Obi_Front.png",
                         rightTranslation: `
-                            <p><i>To be filled in</i></p>
+                            <p>Guitarist Jun Senoue, together with Hardline singer Johnny Gioeli, have joined forces for Sons Of Angels' first album.</p>
+                            <p>It contains the full soundtrack of popular racing game "NASCAR -Rubbin' Racing". A masterpiece of fast-paced American hard rock!</p>
                         `,
                         middleTranslation: `
-                            <p><i>To be filled in</i></p>
+                            <p><b>White:</b> Sons Of Angels | Thrill Of The Feel</p>
+                            <p><b>Yellow:</b> Sons Of Angels: Thrill Of The Feel<br />
+                                Johnny Gioeli <i>vo</i>・Jun Senoue <i>g</i>・Naoto Shibata <i>b</i>・Hirotsugu Homma <i>ds</i></p>
                         `,
                         leftTranslation: `
-                            <p><i>To be filled in</i></p>
+                            <p><i>Track list</i></p>
+                            <p><b>Producer:</b> Jun Senoue</p>
+                            <p><b>Booklet:</b> Kazuo Hirose/BURRN!<br />
+                                Jun Kawai</p>
+                            <p>Sons Of Angels T-Shirt present!!<br />
+                                *Please see back of wrapper for details</p>
                         `
                     },
                     obiBack:
@@ -385,14 +393,14 @@
                     starText: "(The max a CD can hold is 1:14:00)",
                     tracks:
                     [
-                        { id: "twoNights", playbackLength: "3:46", tags: [ 'first', 'original' ] },
+                        { id: "twonights", playbackLength: "3:46", tags: [ 'first', 'original' ] },
                         { id: "bm", playbackLength: "4:46", tags: [ 'first', 'original' ] },
                         { id: "lotd", playbackLength: "4:32", tags: [ 'first', 'original' ] },
                         { id: "dnd", playbackLength: "4:43", tags: [ 'first', 'original' ] },
                         { id: "dg", playbackLength: "2:31", tags: [ 'live' ] },
                         { id: "itw", playbackLength: "3:22", tags: [ 'live' ] },
                         { id: "f", playbackLength: "3:26", tags: [ 'live' ] },
-                        { id: "twoNights", playbackLength: "3:43", tags: [ 'live' ], description: "A <i>live</i> performance of the track, as opposed to the studio track at the beginning." },
+                        { id: "twonights", playbackLength: "3:43", tags: [ 'live' ], description: "A <i>live</i> performance of the track, as opposed to the studio track at the beginning." },
                         { id: "dnd", playbackLength: "4:56", tags: [ 'live' ], description: "A <i>live</i> performance of the track, as opposed to the studio track at the beginning." },
                         { id: "wm", playbackLength: "2:38", tags: [ 'live' ] },
                         { id: "ll", playbackLength: "5:53", tags: [ 'live' ] },
