Added TOTF Obi Translation, fixed 2N2R issue on DTF
Stfu Github the commit summary is literally exactly 50 characters, it's fine. Anyways, the front Obi was already finished but I did the back, which has info about a T-Shirt raffle.

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -80,13 +80,19 @@
                     {
                         imgSrc: "../img/content/discography/physical/Thrill/Obi_Back.png",
                         rightTranslation: `
-                            <p><i>To be filled in</i></p>
+                            <p>Sons Of Angels - T-Shirt Present!!</p>
                         `,
                         middleTranslation: `
-                            <p><i>To be filled in</i></p>
+                            <p>Cut out the application ticket attached to the Obi, paste it onto a postcard,<br />
+                                fill in your address, name, and phone number, and apply to the following address.</p>
+                            <p>50 people will be selected by lottery, and will recieve a T-Shirt with the Sons Of Angels logo.</p>
                         `,
                         leftTranslation: `
-                            <p><i>To be filled in</i></p>
+                            <p>Address: 〒107-0061<br />
+                                Palacio Tower, 3-6-7 Kita-Aoyama, Minato-ku, Tokyo<br />
+                                Victor Entertainment Co., Ltd.</p>
+                                <p>Application Deadline: April 30th<br />
+                                    *Announcement of winners will be returned when the product is shipped.</p>
                         `
                     },
                     physicalTray:
@@ -469,7 +475,7 @@
                     tracks:
                     [
                         { id: "glr", playbackLength: "4:36", tags: [ 'first' ] },
-                        { id: "twoNights", playbackLength: "3:45", tags: [ 'rerelease' ] },
+                        { id: "twonights", playbackLength: "3:45", tags: [ 'rerelease' ] },
                         { id: "f", playbackLength: "3:22", tags: [ 'rerelease' ] },
                         { id: "sb", playbackLength: "2:43", tags: [ 'rerelease' ] },
                         { id: "ootd", playbackLength: "4:29", tags: [ 'rerelease' ] },
@@ -489,7 +495,7 @@
                     dvdTracks:
                     [
                         { id: "cmc", playbackLength: "4:36", tags: [ 'lyric' ], description: "A brand-new lyric video of 'Call Me Crazy', with video of the band playing the song in a music video-type format in the background." },
-                        { id: "twoNights", playbackLength: "3:45", tags: [ 'rerelease', 'lyric' ], description: "A re-release of the 2 Nights 2 Remember lyric vid for the short version of the song previously featured on the Crush 40 YouTube channel." },
+                        { id: "twonights", playbackLength: "3:45", tags: [ 'rerelease', 'lyric' ], description: "A re-release of the 2 Nights 2 Remember lyric vid for the short version of the song previously featured on the Crush 40 YouTube channel." },
                         { id: "ootd", playbackLength: "3:45", tags: [ 'partial-rerelease', 'lyric' ], description: "A re-release of the lyric video for this show. Interestingly however, it <i>has</i> been modified to remove the 'Rise Again' advertising text towards the end." },
                         { id: "wmf", playbackLength: "3:45", tags: [ 'first', 'live' ], description: "A relatively low-quality camera video from Team A'Thrash of Crush 40's performance at JAPAN Game Music Festival II:RE. This is one of the very few videos to surface of the show." },
                         { id: "dnd", playbackLength: "3:45", tags: [ 'first', 'live' ], description: "Previously unreleased video of the 2 Nights 2 Remember show. Interestingly this song cuts in <i>earlier</i> than it does on the 2 Nights 2 Remember CD, therefore providing a small bit of previously unreleased audio." },
