--- a/menus/credits.html
+++ b/menus/credits.html
@@ -53,6 +53,10 @@
                 <h2>RM05</h2>
                 <p>Image categorization</p>
             </div>
+            <div class="credit">
+                <h2>Skankindead</h2>
+                <p>Writer, Text Editor, Translator</p>
+            </div>
         </div>
 
         <div class="creditEveryone">
