Added Super Sonic Songs obi translation
Thanks to Miles on the Discord for some Japanese help.

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -216,13 +216,22 @@
                     {
                         imgSrc: "../img/content/discography/physical/SSS/Obi.jpg",
                         rightTranslation: `
-                            <p><i>To be filled in</i></p>
+                            <p>Hardline singer Johnny Gioeli and Sega Guitarist Jun Senoue's band, Crush 40.</p>
+                            <p>A long-awaited album that covers the band's best works, such as the theme songs from Sonic The Hedgehog! Also includes new songs!</p>
                         `,
                         middleTranslation: `
-                            <p><i>To be filled in</i></p>
+                            <p><b>Crush 40</b><br />
+                            <i>The Best Of Crush 40</i><br />
+                            <i>Super Sonic Songs</i></p>
                         `,
                         leftTranslation: `
-                            <p><i>To be filled in</i></p>
+                            <p><b>Yellow:</b> 3 albums produced by Jun Senoue, for 3 consecutive months!</p>
+                            <p><b>Jun Senoue / The Works</b><br />
+                                This CD includes many previously unreleased and rare songs.<br />
+                                Featuring many singers such as MR. BIG vocalist Eric Martin, as well as Skye Sweetnam!</p>
+                            <p><b>THE BEST OF SONIC THE HEDGEHOG Part 2 - TRUE COLORS</b><br />
+                                The second Best Of album from Sonic The Hedgehog, following the popular True Blue!<br />
+                                This album mainly focuses on character themes, but it also includes several new recordings!</p>
                         `
                     },
                     physicalBack:
