Componentize loading screen

--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
         <link href="css/site.css" rel="stylesheet">
         <link href="css/home.css" rel="stylesheet">
 
+        <!-- Components 40 JavaScript -->
+        <link href="components/loading/style.css" rel="stylesheet">
+        <script src="components/loading/logic.js"></script>
+
         <!-- Crush 40 JavaScript -->
-        <script src="js/loading-bar.js"></script>
+        <!--<script src="js/loading-bar.js"></script>-->
         <script src="js/site.js"></script>
 		<script src="js/home.js"></script>
     </head>
