Componentize zoom panel

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <link href="components/loading/style.css" rel="stylesheet">
         <script src="components/loading/logic.js"></script>
 
+        <link href="components/imgzoompanel/style.css" rel="stylesheet">
+        <script src="components/imgzoompanel/logic.js"></script>
+
         <link href="components/menupanel/style.css" rel="stylesheet">
         <script src="components/menupanel/logic.js"></script>
 
