--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <link href="components/menupanel/style.css" rel="stylesheet">
         <script src="components/menupanel/logic.js"></script>
 
+        <link href="components/navbar/style.css" rel="stylesheet">
+        <script src="components/navbar/logic.js"></script>
+
         <!-- Crush 40 JavaScript -->
         <!--<script src="js/loading-bar.js"></script>-->
         <script src="js/site.js"></script>
