Add componentization to other root pages

--- a/discography.html
+++ b/discography.html
@@ -12,7 +12,18 @@
         <link href="css/discography.css" rel="stylesheet">
 
         <!-- Crush 40 JavaScript -->
-        <script src="js/loading-bar.js"></script>
+        <link href="components/loading/style.css" rel="stylesheet">
+        <script src="components/loading/logic.js"></script>
+
+        <link href="components/imgzoompanel/style.css" rel="stylesheet">
+        <script src="components/imgzoompanel/logic.js"></script>
+
+        <link href="components/menupanel/style.css" rel="stylesheet">
+        <script src="components/menupanel/logic.js"></script>
+
+        <link href="components/navbar/style.css" rel="stylesheet">
+        <script src="components/navbar/logic.js"></script>
+        
         <script src="js/songList.js"></script>
         <script src="js/site.js"></script>
 		<script src="js/discography.js"></script>
