--- a/gear.html
+++ b/gear.html
@@ -8,7 +8,7 @@
         <meta name="description" content="A list of the gear used by Crush 40!">
         <meta name="keywords" content="Crush 40, Johnny Gioeli, Jun Senoue, Sonic the Hedgehog, Crush 40 Live, Crush 40 Discography">
 
-        <link href="css/site.css" rel="stylesheet">
+        <link href="css/rootPage.css" rel="stylesheet">
         <link href="css/gear.css" rel="stylesheet">
 
         <!-- Crush 40 JavaScript -->
@@ -155,7 +155,7 @@
                 <div class="otherDetails">
                     <h2 id="gtrTitle">ESP SONIC-II</h2>
                     <p id="gtrDesc">Jun uses this guitar for a significant amount of the Crush 40 shows in existance.</p>
-                    <button data-action="panel" data-page-name="guitarView?g=sonic-ii" class="emptyButton">View More Details</button>
+                    <button data-action="panel" data-page-name="guitarView?g=sonicii" class="emptyButton">View More Details</button>
                 </div>
                 <div class="selectInfo" id="selectInfo">
                     <div class="page pickupInfo" id="selectPickupPage">
