--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="The biggest fan-made Crush 40 website on the planet!">
         <meta name="keywords" content="Crush 40, Johnny Gioeli, Jun Senoue, Sonic the Hedgehog, Crush 40 Live, Crush 40 Discography">
 
-        <link href="css/site.css" rel="stylesheet">
+        <link href="css/rootPage.css" rel="stylesheet">
         <link href="css/home.css" rel="stylesheet">
 
         <!-- Components 40 JavaScript -->
