--- a/menus/guitarView.html
+++ b/menus/guitarView.html
@@ -8,6 +8,7 @@
 
         <link href="../css/site.css" rel="stylesheet">
         <link href="css/guitarView.css" rel="stylesheet">
+        <script src="../js/gigList.js"></script>
         <script src="js/guitarView.js"></script>
     </head>
     <body>
@@ -17,9 +18,8 @@
         </div>
 
         <div class="guitarList">
-            <!-- TODO: Decide a better look? -->
             <ul class="generalList tabLikeList list" id="guitarList">
-                <li class="selected"><p>Item1</p></li>
+                <li><p>Item1</p></li>
                 <li><p>Item2</p></li>
             </ul>
         </div>
@@ -28,7 +28,7 @@
         <div class="performances block">
             <h2 class="dimentiaTitle">Performances</h2>
             <p>All performances this guitar was used in.</p>
-            <ul class="generalList list">
+            <ul class="generalList list" id="performancesList">
                 <li><p>Item1</p></li>
                 <li><p>Item2</p></li>
             </ul>
