--- a/discography.html
+++ b/discography.html
@@ -8,7 +8,7 @@
         <meta name="description" content="A list of Crush 40's entire discography!">
         <meta name="keywords" content="Crush 40, Johnny Gioeli, Jun Senoue, Sonic the Hedgehog, Crush 40 Live, Crush 40 Discography">
 
-        <link href="css/site.css" rel="stylesheet">
+        <link href="css/rootPage.css" rel="stylesheet">
         <link href="css/discography.css" rel="stylesheet">
 
         <!-- Crush 40 JavaScript -->
