Fix menu pages to use new styling

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -6,7 +6,7 @@
         
         <title>Album Details</title>
         
-        <link href="../css/site.css" rel="stylesheet">
+        <link href="../css/menuPage.css" rel="stylesheet">
         <link href="css/albumView.css" rel="stylesheet">
 
         <script src="js/menuZoom.js"></script>
