--- a/menus/allMembers.html
+++ b/menus/allMembers.html
@@ -7,7 +7,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-        <link href="../css/site.css" rel="stylesheet">
+        <link href="../css/menuPage.css" rel="stylesheet">
         <link href="css/allMembers.css" rel="stylesheet">
 
         <!-- Members -->
