--- a/menus/guitarView.html
+++ b/menus/guitarView.html
@@ -6,7 +6,7 @@
         <title>Guitar View</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link href="../css/site.css" rel="stylesheet">
+        <link href="../css/menuPage.css" rel="stylesheet">
         <link href="css/guitarView.css" rel="stylesheet">
         <script src="../js/gigList.js"></script>
         <script src="js/guitarView.js"></script>
