--- a/menus/songView.html
+++ b/menus/songView.html
@@ -6,7 +6,7 @@
         
         <title>Song Details</title>
         
-        <link href="../css/site.css" rel="stylesheet">
+        <link href="../css/menuPage.css" rel="stylesheet">
         <link href="css/songView.css" rel="stylesheet">
 
         <script src="../js/songList.js"></script>
