--- a/menus/trivia.html
+++ b/menus/trivia.html
@@ -6,7 +6,7 @@
         <title>Crush 40 Trivia Quiz</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link href="../css/site.css" rel="stylesheet">
+        <link href="../css/menuPage.css" rel="stylesheet">
         <link href="css/trivia.css" rel="stylesheet">
 
         <!-- Questions -->
