Change Michael credit

--- a/menus/credits.html
+++ b/menus/credits.html
@@ -34,7 +34,7 @@
                 <p>Discography research + detailing</p>
             </div>
             <div class="credit">
-                <h2>JoaJoGio</h2>
+                <h2>Michael Ward</h2>
                 <p>Writer, Tester</p>
             </div>
             <div class="credit">
