Hide unfinished "View More Details" button for Jun

--- a/gear.html
+++ b/gear.html
@@ -155,7 +155,7 @@
                 <div class="otherDetails">
                     <h2 id="gtrTitle">ESP SONIC-II</h2>
                     <p id="gtrDesc">Jun uses this guitar for a significant amount of the Crush 40 shows in existance.</p>
-                    <button data-action="panel" data-page-name="guitarView?g=sonicii" class="emptyButton">View More Details</button>
+                    <!--<button data-action="panel" data-page-name="guitarView?g=sonicii" class="emptyButton">View More Details</button>-->
                 </div>
                 <div class="selectInfo" id="selectInfo">
                     <div class="page pickupInfo" id="selectPickupPage">
